--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,8 @@ yellow:  #f1c40f;
 green:  #13b46d;
 
 
-*/html{
+*/
+html{
   margin: 0;
   padding:0;
 }
@@ -19,6 +20,7 @@ body {
   background-color:  #13aab4;
   margin: 0;
   padding: 0;
+  position:relative;
 }
 header {
   text-align: center;
@@ -55,6 +57,8 @@ nav {
   padding-right: 24em;
 
   margin-top: 2em;
+  /* ensures padding and margin are included in the size*/
+  box-sizing: border-box;
 }
 
 button {
@@ -65,26 +69,29 @@ button {
 }
 
 #homeImg {
- margin-top: 1em;
- display:flex;
- justify-content: center;
+  margin-top: 1em;
+  display:flex;
+  justify-content: center;
 }
 
 #homeImg img {
   box-shadow: 2px 2px 5px #1d13b4;
   border: 2px solid #135ab4;
   border-radius: 2px;
+  box-sizing: border-box;
 }
 
 .container {
 
   padding: 1em;
-
+/*sets up the grid layout*/
   display: grid;
   grid-gap: 1em;
   grid-template-columns:repeat(auto-fit, minmax(50px,1fr));
   grid-auto-rows: 50px;
   grid-auto-flow: dense;
+
+  box-sizing: border-box;
 }
 
 .container div{
@@ -101,22 +108,43 @@ button {
   position: absolute;
   min-height: 100%;
   width:100%;
+  /*centers the element both horizontally and vertically*/
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .landscape {
- grid-column: span 4;
- grid-row: span 3;
+  grid-column: span 4;
+  grid-row: span 3;
 }
 
 .portrait {
- grid-column: span 4;
- grid-row: span 6;
+  grid-column: span 4;
+  grid-row: span 6;
 }
 
 .big {
   grid-column: span 8;
   grid-row: span 6;
+}
+
+.slideshow {
+  /*there is a small gap at the bottom of the border:needs removing*/
+  box-shadow: 2px 2px 5px #1d13b4;
+  border: 2px solid #135ab4;
+  border-radius: 2px;
+/*sets div to the middle of the viewport.*/
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  box-sizing: border-box;
+}
+
+.slideshow img {
+  /*ensures responsive img size*/
+  max-width:100%;
+  height:auto;
 }
