--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,7 @@ nav {
   padding-right: 24em;
 
   margin-top: 2em;
+  
   /* ensures padding and margin are included in the size*/
   box-sizing: border-box;
 }
@@ -82,8 +83,8 @@ button {
 }
 
 .container {
-
   padding: 1em;
+
 /*sets up the grid layout*/
   display: grid;
   grid-gap: 1em;
@@ -108,6 +109,7 @@ button {
   position: absolute;
   min-height: 100%;
   width:100%;
+
   /*centers the element both horizontally and vertically*/
   top: 50%;
   left: 50%;
@@ -130,21 +132,25 @@ button {
 }
 
 .slideshow {
-  /*there is a small gap at the bottom of the border:needs removing*/
   box-shadow: 2px 2px 5px #1d13b4;
   border: 2px solid #135ab4;
   border-radius: 2px;
+  box-sizing: border-box;
+
 /*sets div to the middle of the viewport.*/
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  box-sizing: border-box;
+  background-color: #1d13b4;
+  display: flex;
 }
 
 .slideshow img {
   /*ensures responsive img size*/
   max-width:100%;
   height:auto;
+
+  vertical-align: middle;
 }
