--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,6 +131,17 @@ button {
   grid-row: span 6;
 }
 
+#background{
+	z-index: 1;
+	background-color:rgba(29, 19, 180, 0.4);
+	min-height: 100%;
+	min-width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 #slideshow {
   box-shadow: 2px 2px 5px #1d13b4;
   border: 2px solid #135ab4;
@@ -157,14 +168,9 @@ button {
   vertical-align: middle;
 }
 
-
-#background{
-	z-index: 1;
-	background-color:rgba(29, 19, 180, 0.4);
-	min-height: 100%;
-	min-width: 100%;
+#nav {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	z-index:3;
 }
