Some tidying up and fixing keyboard navigation
adding focus styles to the main menu.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,14 @@ button {
   color: #f1c40f;
 }
 
+button:focus{
+	font-weight: bolder;
+}
+
+button:hover{
+	font-weight: bolder;
+}
+
 #homeImg {
   margin-top: 1em;
   display:flex;
